tests/sksl/errors/ContinueOutsideLoop.glsl
### Compilation failed:

error: 3: continue statement must be inside a loop
    continue;
    ^^^^^^^^
error: 8: continue statement must be inside a loop
        default: continue;
                 ^^^^^^^^
2 errors
